Fixed overflow hidden bug, removed redudant links from NavBar

--- a/PlaygroundFrontend/src/css/index.css
+++ b/PlaygroundFrontend/src/css/index.css
@@ -1,12 +1,6 @@
 body {
   margin: 0;
   height: 100vh;
-  overflow: hidden;
-}
-
-#file-tree {
-  height: 100%;
-  overflow: auto;
 }
 
 #editor {
